# Structlog_in_Action

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: logger_config.py  main.py  strategies.py
tests/: test_strategies.py
